- IBAN was not shown on company info if bank no. was not entered
- Strict checking in setAttribute. Renaming 1 to 1.0 didn't work.
- Correct log dir permissions after debian package upgrade
- When a user uploaded the same attachment twice, a number was appended.
- urldecode query string in mailto handler
- Show correct owner in event dialog
- LDAP user sync script added.
- Added workflow support to the billing orders
- Removed Apply button from ticket dialog

03-09-2012 4.0.95
- Missing content-lenght header caused GOTA problem.

31-08-2012 4.0.94
- Bug: No temp file for inline attachment

31-08-2012 4.0.93
- Added new recently modified files portlet.

31-08-2012 4.0.92
- Encoding characterset was not set when displaying saved email messages, didn't display russian characters
- Forgetful FilesGrid now remembers its state
- Calendar: removed GO version from calendar print
- Change go_log ip field to 45 chars to support ipv6
- Updated Norwegian language
- Added experimental contact autolink option
- Rollback of permission check by deleting shared mailbox messages
- Fixed: Rounding error in billing module
- Updated German language

29-08-2012 4.0.91
- Fixed: SyncML duplicated contacts on client when there were more than 200 contacts.
- Fixed: Inline images were corrupted when switching e-mail templates
- Optimized: speed in rendering custom field columns
- Fixed: Fixed resize of customfieldsdialog optionsgrid
- Updated Italian translation
- Fixed: Digest authentication for WebDAV, CalDAV and CardDAV failed after changing password. Logging into Group-Office again re-enabled the login.
- Improved: Advanced search improved with visual indication and it's translatable.
- Fixed: Printing calendar, events have a black background 

28-08-2012 4.0.90
- Fixed: GOTA crashed after java update 1.7.06
- Fixed: When adding a link to an email the receiver does not have access to the mail could not be read. New behavior: will just not link the item.